--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   "Keflavik", "KF Tirana", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
-  "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "LKS Łódź", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
+  "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "Łódzki", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
   "Losena", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö FF", 
   "Manchester City", "Manchester United", "Marek Dupnica", 
   "Marítimo", "Metalist Charkiv", "Metz", "Middlesbrough", "Midtjylland", "Milan", "Mlada Boleslav", "Molde", "Monaco", "München 1860", "Montpellier", "Moss", 
@@ -217,7 +217,7 @@
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
-  "Valletta", "Valur", "Vardar", "Vasas Budapest", "Vaslui", "Vejle", "Velez Mostar", "Ventspils", "Victoria Bucarest", "Viking", "Vikingur", "Viktoria Frankfurt", "Viktoria Plzen", 
+  "Valletta", "Valur", "Vardar", "Vasas Budapest", "Vaslui", "Vejle", "Velez Mostar", "Ventspils", "Victoria Bucarest", "Viking", "Vikingur", "Frankfurter Viktoria", "Viktoria Plzen", 
   "Villareal", "Vistola Kraków", "Vitesse", "Vitkovice", "Vitoria Guimaraes", "Vitoria Setubal", "Vllaznia", "Vojvodina", "Vorskla", "VSS Kosice", "Wacker Innsbruck", "Waterford", 
   "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys", 
   "Zaglebie Lubin", "Zaglebie Walbrzych", "Zalgiris", "Zalgiris Kaunas", "Zbrojovka Brno", "Zeljeznicar", "Zenit San Pietroburgo", "Zilina", "Zimbru Chișinău", "Zorja", "Zrinjski Mostar", 
@@ -232,7 +232,7 @@
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"},
   "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
-  "Stade Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
+  "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1b/600px_White_border_HEX-DC143C_rectangle.svg"},
   "Barcelona": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/4f/600px_Blue_HEX-00529F_Gold_HEX-FFDF1A_White_Purple_HEX-A2214B_Red_HEX-E1393D.svg"}
@@ -349,6 +349,35 @@
   "Ards": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Drumcondra": { CL_P: 1, CL_VS: -2, CL_DR: -12 },
   "HPS": { CL_P: 1, CL_VS: -2, CL_DR: -7 }
+},
+      "1959/60": {
+  "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS: 5, CL_DR: 21 },
+  "Eintracht Frankfurt": { CL_F: 1, CL_P: 1, CL_VS: 3, CL_DR: 8 },
+  "Barcelona": { CL_SF: 1, CL_P: 1, CL_VS: 3, CL_DR: 13 },
+  "Rangers": { CL_SF: 1, CL_P: 1, CL_VS: 4, CL_DR: 7 },
+  "Nice": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
+  "Wiener SK": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 3 },
+  "Inter Bratislava": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 2 },
+  "Göteborg": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 4 },
+  "Sparta Rotterdam": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 1 },
+  "Fenerbahçe": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -3 },
+  "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Crvena Zvezda": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Young Boys": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "B1909": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Milan": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
+  "Jeunesse Esch": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -6 },
+  "CSKA Sofija": { CL_P: 1, CL_VS: -1, CL_DR: -4 },
+  "Petrolul Ploiești": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Csepel": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Shamrock Rovers": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Olympiakos": { CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Łódzki": { CL_P: 1, CL_VS: 0, CL_DR: -4 },
+  "Linfield": { CL_P: 1, CL_VS: 0, CL_DR: -4 },
+  "KuPS": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Frankfurter Viktoria": { CL_P: 1, CL_VS: 0, CL_DR: -1 },
+  "Anderlecht": { CL_P: 1, CL_VS: -2, CL_DR: -5 },
+  "Porto": { CL_P: 1, CL_VS: -2, CL_DR: -3 }
 }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
