--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
   "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
-  "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
+  "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Frankfurt", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahçe", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
   "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
