--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
   "Zulte Waregem", "Zürich"
 ];
   const teamInfo = {
+  "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
   "Juventus": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/49/600px_pentasection_vertical_Black_White.svg"},
   "Manchester United": {flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
@@ -357,11 +359,11 @@
   "Rangers": { CL_SF: 1, CL_P: 1, CL_VS: 4, CL_DR: 7 },
   "Nice": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
   "Wiener SK": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 3 },
-  "Inter Bratislava": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 2 },
-  "Göteborg": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 4 },
+  "Inter Bratislava": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 2 },
+  "Göteborg": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 4 },
   "Sparta Rotterdam": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 1 },
   "Fenerbahçe": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -3 },
-  "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Wolverhampton": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Crvena Zvezda": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Young Boys": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "B1909": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
