--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
   "Hapoel Tel Aviv", "Heart of Midlothian", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
-  "Honvéd Budapest", "HPS", "Hradec Kralove", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
+  "Honvéd Budapest", "HPS", "Hradec Králové", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
   "Keflavik", "KF Tirana", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
@@ -380,6 +380,36 @@
   "Frankfurter Viktoria": { CL_P: 1, CL_VS: 0, CL_DR: -1 },
   "Anderlecht": { CL_P: 1, CL_VS: -2, CL_DR: -5 },
   "Porto": { CL_P: 1, CL_VS: -2, CL_DR: -3 }
+},
+      "1960/61": {
+  "Benfica": { CL_CL: 1, CL_P: 1, CL_VS: 6, CL_DR: 16 },
+  "Barcelona": { CL_F: 1, CL_P: 1, CL_VS: 4, CL_DR: 10 },
+  "Rapid Wien": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 5 },
+  "Hamburger": { CL_SF: 1, CL_P: 1, CL_VS: 0, CL_DR: 5 },
+  "Malmö": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
+  "Aarhus": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 1 },
+  "Burnley": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Hradec Králové": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: -3 },
+  "Stade de Reims": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 9 },
+  "Újpesti Dózsa": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 1 },
+  "Young Boys": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 2 },
+  "CSKA Sofija": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
+  "Erzgebirge Aue": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Real Madrid": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Panathīnaïkos": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Fredrikstad": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Glenavon": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Steaua București": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Juventus": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Legia Warszawa": { CL_P: 1, CL_VS: -2, CL_DR: -2 },
+  "Beşiktaş": { CL_P: 1, CL_VS: -2, CL_DR: -3 },
+  "Ajax": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "HIFK": { CL_P: 1, CL_VS: -2, CL_DR: -3 },
+  "Heart of Midlothian": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Crvena Zvezda": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Lierse": { CL_P: 1, CL_VS: -2, CL_DR: -5 },
+  "Limerick": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
+  "Jeunesse Esch": { CL_P: 1, CL_VS: -2, CL_DR: -10 }
 }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
