--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
   "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "Łódzki", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
-  "Losena", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö", 
+  "Losena", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö FF", 
   "Manchester City", "Manchester United", "Marek Dupnica", 
   "Marítimo", "Metalist Charkiv", "Metz", "Middlesbrough", "Midtjylland", "Milan", "Mlada Boleslav", "Molde", "Monaco", "München 1860", "Montpellier", "Moss", 
   "MTK Budapest", "Nacional de Madeira", "Nancy", "Nantes", "Napoli", "NEC Nijmegen", "Neftçi Baku", "Neuchâtel Xamax", "Newcastle Utd", "Nice", "NK Maribor", 
@@ -386,7 +386,7 @@
   "Barcelona": { CL_F: 1, CL_P: 1, CL_VS: 4, CL_DR: 10 },
   "Rapid Wien": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 5 },
   "Hamburger": { CL_SF: 1, CL_P: 1, CL_VS: 0, CL_DR: 5 },
-  "Malmö": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
+  "IFK Malmö": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
   "Aarhus": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 1 },
   "Burnley": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Hradec Králové": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: -3 },
