--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
   const teamInfo = {
   "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
+  "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/e/e2/600px_Granata_con_inserti_Bianchi.png"},
   "Juventus": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/49/600px_pentasection_vertical_Black_White.svg"},
   "Manchester United": {flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
@@ -400,9 +402,9 @@
   "Fredrikstad": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Glenavon": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Steaua București": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
-  "Juventus": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
-  "Legia Warszawa": { CL_P: 1, CL_VS: -2, CL_DR: -2 },
-  "Beşiktaş": { CL_P: 1, CL_VS: -2, CL_DR: -3 },
+  "Juventus": { CL_P: 1, CL_VS: 0, CL_DR: -1 },
+  "Legia Warszawa": { CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Beşiktaş": { CL_P: 1, CL_VS: 0, CL_DR: -3 },
   "Ajax": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
   "HIFK": { CL_P: 1, CL_VS: -2, CL_DR: -3 },
   "Heart of Midlothian": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
