--- a/index.html
+++ b/index.html
@@ -412,7 +412,20 @@
   "Lierse": { CL_P: 1, CL_VS: -2, CL_DR: -5 },
   "Limerick": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Jeunesse Esch": { CL_P: 1, CL_VS: -2, CL_DR: -10 }
-}
+},
+      "1961/62": {
+        "Fenerbaçhe": {CL_0:1, CL_P:1, CL_VS:-2, CL_DR:-2},
+        "Benfica": {CL_CL:1, CL_P:1, CL_VS:2, CL_DR:11},
+        "Real Madrid": {CL_F:1, CL_P:1, CL_VS:6, CL_DR:22},
+        "Tottenham": {CL_SF:1, CL_P:1, CL_VS:1, CL_DR:8},
+        "Standard Liège": {CL_SF:1, CL_P:1, CL_VS:2, CL_DR:4},
+        "Nürnberg": {CL_Q:1, CL_P:1, CL_VS:4, CL_DR:6},
+        "Rangers": {CL_Q:1, CL_P:1, CL_VS:4, CL_DR:5},
+        "Juventus": {CL_Q:1, CL_P:1, CL_VS:2, CL_DR:5},
+        "Dukla Praha": {CL_Q:1, CL_P:1, CL_VS:1, CL_DR:0},
+        "Servette": {CL_O:1, CL_P:1, CL_VS:2, CL_DR:5},
+        "B1913": {CL_O:1, CL_P:1, CL_VS:0, CL_DR:1}
+      }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
 const seasons = Object.keys(data);
