--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   "Jeunesse Esch": { CL_P: 1, CL_VS: -2, CL_DR: -10 }
 },
       "1961/62": {
-        "Fenerbaçhe": {CL_0:1, CL_P:1, CL_VS:-2, CL_DR:-2},
+        "Fenerbahçe": {CL_0:1, CL_P:1, CL_VS:-2, CL_DR:-2},
         "Benfica": {CL_CL:1, CL_P:1, CL_VS:2, CL_DR:11},
         "Real Madrid": {CL_F:1, CL_P:1, CL_VS:6, CL_DR:22},
         "Tottenham": {CL_SF:1, CL_P:1, CL_VS:1, CL_DR:8},
@@ -424,7 +424,25 @@
         "Juventus": {CL_Q:1, CL_P:1, CL_VS:2, CL_DR:5},
         "Dukla Praha": {CL_Q:1, CL_P:1, CL_VS:1, CL_DR:0},
         "Servette": {CL_O:1, CL_P:1, CL_VS:2, CL_DR:5},
-        "B1913": {CL_O:1, CL_P:1, CL_VS:0, CL_DR:1}
+        "B1913": {CL_O:1, CL_P:1, CL_VS:0, CL_DR:1},
+        "Austria Wien": {CL_O:1, CL_P:1, CL_VS:0, CL_DR:-2},
+        "Frankfurter Viktoria": {CL_O:1, CL_P:1, CL_VS:-1, CL_DR:-1},
+        "Partizan Beograd": {CL_O:1, CL_P:1, CL_VS:-1, CL_DR:-4},
+        "Haka": {CL_O:1, CL_P:1, CL_VS:-2, CL_DR:-6},
+        "Feyenoord": {CL_P:1, CL_VS:1, CL_DR:7},
+        "CSKA Sofija": {CL_P:1, CL_VS:-1, CL_DR:-1},
+        "Panathīnaïkos": {CL_P:1, CL_VS:-1, CL_DR:-1},
+        "Steaua București": {CL_P:1, CL_VS:-1, CL_DR:-2},
+        "Gornik Zabrze": {CL_P:1, CL_VS:0, CL_DR:-5},
+        "Sporting Clube de Portugal": {CL_P:1, CL_VS:-1, CL_DR:-2},
+        "Linfield": {CL_P:1, CL_VS:-1, CL_DR:-3},
+        "Monaco": {CL_P:1, CL_VS:-2, CL_DR:-2},
+        "Fredrikstad": {CL_P:1, CL_VS:-2, CL_DR:-3},
+        "Vasas Budapest": {CL_P:1, CL_VS:-2, CL_DR:-4},
+        "Hibernians": {CL_P:1, CL_VS:-2, CL_DR:-6},
+        "Drumcondra": {CL_P:1, CL_VS:-2, CL_DR:-8},
+        "Göteborg": {CL_P:1, CL_VS:-2, CL_DR:-9},
+        "Spora Luxembourg": {CL_P:1, CL_VS:-2, CL_DR:-13}
       }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
