--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
     overflow-x:visible;
     width: 300vw;}
   /* Header e Titolo */
-  .hero-section {
-    background: linear-gradient(to right, #e0f2fe, #f8fafc);
-    padding: 30px 20px;
-    margin-bottom: 30px;
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);}
   .main-title {
     font-size: 3rem;
-    text-align: center;
+    text-align: left;
     font-weight: 800;
     color: #0f172a;
+    margin-left: 5px;
     margin-bottom: 20px;}
 /* MENÙ CAMPIONATI */
 .league-menu {
