--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
-  "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
+  "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Wien", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
   "B1913", "Ballkani", "Banik Ostrava", "Barcelona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern München", 
   "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Beşiktaş", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
