--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   "Nordsjælland", "Nürnberg", "Norrköping", "Norwich City", "Nottingham Forest", "NS Mura", "Obilić", "Odense", "OFĪ Krītī", "OFK Beograd", "Olimpija Ljubljana", 
   "Olympiakos", "Olympiakos Leukōsias", "Olympique Lyon", "Olympique Marseille", "Omonia", "OPS", "Örgryte", "Osasuna", "Osijek", "Ankaraspor", "Östers IF", 
   "Oțelul Galați", "P'yownik", "Paços de Ferreira", "Palermo", "Panachaïkī", "Panathīnaïkos", "Pandurii Târgu Jiu", "Paniōnos", "PAOK Thessalonìki", "Paris Saint-Germain", 
-  "Parma", "Partinzan Beograd", "Partizani Tiranë", "Perugia", "Petrolul Ploiești", "Petrzalka", "Pezoporikos Larnaca", "Poli Timisoara", "Polonia Bytom", "Portadown", 
+  "Parma", "Partizan Beograd", "Partizani Tiranë", "Perugia", "Petrolul Ploiești", "Petrzalka", "Pezoporikos Larnaca", "Poli Timisoara", "Polonia Bytom", "Portadown", 
   "Porto", "Portsmouth", "Progres Niedercon", "Progresul Bucarest", "PSV Eindhoven", "Qairat", "Qarabag", "Qəbələ", "Queens Park Rangers", "Rabat Ajax", "Racing Santander", 
   "Radnicki Nis", "Raith Rovers", "Raków Częstochowa", "Randers", "Rangers", "Rapid Bucarest", "Rapid Wien", "Rayo Vallecano", "RB Lipsia", "Real Betis Siviglia", 
   "Real Madrid", "Real Sociedad", "Real Valladolid", "Red Boys Differdange", "Reipas Lahti", "Rennes", "RFC Liegi", "RFS Riga", "Rijeka", "Rio Ave", "Roda JC Kerkrade", 
