--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   "Jeunesse Esch": { CL_P: 1, CL_VS: -2, CL_DR: -10 }
 },
       "1961/62": {
-        "Fenerbahçe": {CL_0:1, CL_P:1, CL_VS:-2, CL_DR:-2},
+        "Fenerbahçe": {CL_O:1, CL_P:1, CL_VS:-2, CL_DR:-2},
         "Benfica": {CL_CL:1, CL_P:1, CL_VS:2, CL_DR:11},
         "Real Madrid": {CL_F:1, CL_P:1, CL_VS:6, CL_DR:22},
         "Tottenham": {CL_SF:1, CL_P:1, CL_VS:1, CL_DR:8},
