--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         "Frankfurter Viktoria": {CL_O:1, CL_P:1, CL_VS:-1, CL_DR:-1},
         "Partizan Beograd": {CL_O:1, CL_P:1, CL_VS:-1, CL_DR:-4},
         "Haka": {CL_O:1, CL_P:1, CL_VS:-2, CL_DR:-6},
-        "Feyenoord": {CL_P:1, CL_VS:1, CL_DR:7},
+        "Feyenoord": {CL_O:1, CL_P:1, CL_VS:1, CL_DR:7},
         "CSKA Sofija": {CL_P:1, CL_VS:-1, CL_DR:-1},
         "Panathīnaïkos": {CL_P:1, CL_VS:-1, CL_DR:-1},
         "Steaua București": {CL_P:1, CL_VS:-1, CL_DR:-2},
