--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
   "Zulte Waregem", "Zürich"
 ];
   const teamInfo = {
+    "Benfica":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
+      colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ac/Rosso_e_Bianco_con_aquila.svg"},
   "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
   "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
