--- a/index.html
+++ b/index.html
@@ -440,7 +440,39 @@
         "Drumcondra": {CL_P:1, CL_VS:-2, CL_DR:-8},
         "Göteborg": {CL_P:1, CL_VS:-2, CL_DR:-9},
         "Spora Luxembourg": {CL_P:1, CL_VS:-2, CL_DR:-13}
-      }
+      },
+      "1962/63": {
+  "Milan": { CL_CL: 1, CL_P: 1, CL_VS: 5, CL_DR: 27 },
+  "Benfica": { CL_F: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
+  "Dundee FC": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
+  "Feyenoord": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
+  "Dukla Praha": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 8 },
+  "Stade de Reims": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: 3 },
+  "Anderlecht": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: -1 },
+  "Galatasaray": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Ipswich Town": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 11 },
+  "Vasas Budapest": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 9 },
+  "Sporting Clube de Portugal": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 4 },
+  "Polonia Bytom": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
+  "Austria Wien": { CL_O: 1, CL_P: 1, CL_VS: 2, CL_DR: 0 },
+  "CSKA Sofija": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 2 },
+  "Norrköping": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Esbjerg": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -4 },
+  "Köln": { CL_P: 1, CL_VS: 0, CL_DR: -3 },
+  "Real Madrid": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Linfield": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Servette": { CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Partizani Tiranë": { CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Dinamo București": { CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Panathīnaïkos": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Partizan Beograd": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "HIFK": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Frankfurter Viktoria": { CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Shelbourne": { CL_P: 1, CL_VS: -2, CL_DR: -6 },
+  "Fredrikstad": { CL_P: 1, CL_VS: -2, CL_DR: -10 },
+  "Floriana": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
+  "Union Luxembourg": { CL_P: 1, CL_VS: -2, CL_DR: -14 }
+}
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
 const seasons = Object.keys(data);
