--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/d/d8/600px_Man_Utd_stylized.svg"},
   "Milan": {flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"},
+  "Porto":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/9/9b/600px_Bianco_e_Blu_a_Strisce-Flag.svg"},
   "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
   "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
