--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Beşiktaş", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
-  "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Kjøbenhavns BK", 
+  "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Köln", "Kjøbenhavns BK", 
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
@@ -188,7 +188,7 @@
   "Hapoel Tel Aviv", "Heart of Midlothian", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
   "Honvéd Budapest", "HPS", "Hradec Králové", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
-  "Keflavik", "KF Tirana", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
+  "Keflavik", "KF Tiranë", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
   "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "Łódzki", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
@@ -211,7 +211,7 @@
   "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade de Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liège", "Start", "Steaua București", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
-  "Udinese", "Uerdingen", "Újpesti Dózsa", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
+  "Udinese", "Uerdingen", "Újpesti Dózsa", "Union Berlino", "Union Luxembourg", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
   "Valletta", "Valur", "Vardar", "Vasas Budapest", "Vaslui", "Vejle", "Velez Mostar", "Ventspils", "Victoria Bucarest", "Viking", "Vikingur", "Frankfurter Viktoria", "Viktoria Plzen", 
   "Villareal", "Vistola Kraków", "Vitesse", "Vitkovice", "Vitoria Guimaraes", "Vitoria Setubal", "Vllaznia", "Vojvodina", "Vorskla", "VSS Kosice", "Wacker Innsbruck", "Waterford", 
   "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys", 
