--- a/index.html
+++ b/index.html
@@ -81,16 +81,17 @@
   /* Tabella */
   table {
     border-collapse: collapse;
-    width: 100%;
+    width: auto;
     background-color: #ffffff;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);}
   th, td {
     border: 1px solid #e5e7eb;
-    padding: 4px 5px;
+    padding: 5px 7px;
     text-align: center;
-    font-size: 0.75rem;}
+    font-size: 0.75rem;
+    white-space: nowrap;}
   th {
     background-color: #f3f4f6;
     font-weight: 600;
