--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     const teams = [
   "Aalborg BK", "Aarau", "Aarhus", "AB", "Aberdeen", "Académica Coimbra", "Admira Wien", "Admira Wacker", "ADO Den Haag",
   "AE Larisas", "AEK Athīna", "AEK Làrnaka", "AEL Lemesos", "AIK Solna", "Ajax", "Akademik Sofija", "Alanija Vladikavkaz",
-  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
+  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthōsī Ammochōstou", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
   "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Wien", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
@@ -182,7 +182,7 @@
   "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Frankfurt", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
-  "Fenerbahçe", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
+  "Fenerbahçe", "Ferencváros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
   "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
   "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
@@ -475,8 +475,41 @@
   "Fredrikstad": { CL_P: 1, CL_VS: -2, CL_DR: -10 },
   "Floriana": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
   "Union Luxembourg": { CL_P: 1, CL_VS: -2, CL_DR: -14 }
-}
-    };const startYear = document.getElementById("startYear");
+},
+      "1963/64": {
+      "Internazionale Milano": {CL_CL:1, CL_P: 1, CL_VS:7, CL_DR:11},
+      "Real Madrid": {CL_F:1, CL_P: 1, CL_VS:5, CL_DR:17},  
+      "Borussia Dortmund": {CL_SF:1, CL_P: 1, CL_VS:1, CL_DR:8},
+      "Zürich": {CL_SF:1, CL_P: 1, CL_VS:-2, CL_DR:-4},
+      "PSV Eindhoven": {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:7},
+      "Dukla Praha": {CL_Q:1, CL_P: 1, CL_VS:2, CL_DR:7}, 
+      "Partizan Beograd": {CL_Q:1, CL_P: 1, CL_VS:0, CL_DR:5}, 
+      "Milan" : {CL_Q:1, CL_P: 1, CL_VS:1, CL_DR:2}, 
+      "Benfica": {CL_O:1, CL_P: 1, CL_VS:1, CL_DR:1}, 
+      "Gornik Zabrze": {CL_O:1, CL_P: 1, CL_VS:1, CL_DR:0},   
+      "Galatasaray": {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
+      "Monaco": {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:2},  
+      "Dinamo București" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Jeunesse Esch" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:-2},  
+      "Spartak Plovdiv" : {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:0}, 
+      "Norrköping": {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:-2}, 
+      "Haka"  : {CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Partizani Tiranë": {CL_P: 1, CL_VS:0, CL_DR:-1}, 
+      "Standard Liège" : {CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Dundalk" : {CL_P: 1, CL_VS:0, CL_DR:-2},  
+      "Ferencváros"  : {CL_P: 1, CL_VS:-0, CL_DR:-2},
+      "Austria Wien" : {CL_P: 1, CL_VS:-1, CL_DR:-1},
+      "Everton" : {CL_P: 1, CL_VS:-1, CL_DR:-1}, 
+      "Lisburn Distillery" : {CL_P: 1, CL_VS:-1, CL_DR:-5},
+      "AEK Athīna" : {CL_P: 1, CL_VS:-1, CL_DR:-5}, 
+      "Carl Zeiss Jena" : {CL_P: 1, CL_VS:-2, CL_DR:-3},
+      "Lyn Oslo" : {CL_P: 1, CL_VS:-2, CL_DR:-4}, 
+      "Anorthōsī Ammochōstou"   : {CL_P: 1, CL_VS:-2, CL_DR:-5},   
+      "Esbjerg" : {CL_P: 1, CL_VS:-2, CL_DR:-7}, 
+      "Rangers" : {CL_P: 1, CL_VS:-2, CL_DR:-7},
+      "Valletta" : {CL_P: 1, CL_VS:-2, CL_DR:-8}             
+    }
+      ;const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
 const seasons = Object.keys(data);
 seasons.forEach(season => {
