--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       "Rangers" : {CL_P: 1, CL_VS:-2, CL_DR:-7},
       "Valletta" : {CL_P: 1, CL_VS:-2, CL_DR:-8}             
     }
-      ;const startYear = document.getElementById("startYear");
+const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
 const seasons = Object.keys(data);
 seasons.forEach(season => {
