--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   margin: 0 0 0 0;
   border: 1px solid #d1d5db;
   width: 100%;
-  scroll-behaviour: smooth;
+  scroll-behavior: smooth;
   box-sizing: border-box;}
 .league-menu::-webkit-scrollbar {
   display: none;}
@@ -159,7 +159,6 @@
 </div>
   <table id="classifica">
     <thead>
-      <tr id="header-row"></tr>
     </thead>
     <tbody></tbody>
   </table>
